[gd_scene load_steps=27 format=3 uid="uid://0iv0w8cg1m1x"]

[ext_resource type="Script" path="res://Assets/Enemies/Raven_08_Lucky.gd" id="1_jdidv"]
[ext_resource type="PackedScene" uid="uid://dmbodtb67ycs3" path="res://Assets/Scene/Component/Drop_Components/orb_drop_component.tscn" id="2_7hrhw"]
[ext_resource type="PackedScene" uid="uid://c1gnol8gqyu7s" path="res://Assets/Scene/Component/health_component.tscn" id="3_lwjqc"]
[ext_resource type="PackedScene" uid="uid://csljirmwo8vcg" path="res://Assets/Scene/Component/health_bar.tscn" id="4_wwrqq"]
[ext_resource type="PackedScene" uid="uid://nro3glw2xb4p" path="res://Assets/Scene/Component/hurtbox_component.tscn" id="5_vmd0m"]
[ext_resource type="Script" path="res://Assets/Scene/Component/hitbox_component.gd" id="6_4ska1"]
[ext_resource type="Texture2D" uid="uid://yvyubfn0wc1g" path="res://Assets/Enemies/Raven_01-Sheet.png" id="7_4jayx"]
[ext_resource type="Texture2D" uid="uid://chxrpu14dxq05" path="res://Assets/Textures/light_player.png" id="8_chxx2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ercf5"]
radius = 23.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0xh70"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n74e4"]
radius = 13.0

[sub_resource type="Animation" id="Animation_rikkm"]
resource_name = "Knockback"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3, 1),
"transitions": PackedFloat32Array(1, 3.24901, 1, 1),
"update": 0,
"values": [0.0, 0.506145, -0.752237, 0.0]
}

[sub_resource type="Animation" id="Animation_yts2b"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_s2syc"]
resource_name = "dancing"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 4.9, 6, 7, 7.9, 8.9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(20, -20), Vector2(30, -30), Vector2(40, -15), Vector2(50, 0), Vector2(25, 10), Vector2(0, 20), Vector2(-10, 33), Vector2(-20, 44), Vector2(-10, 20), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4, 4.9, 6, 7, 7.9, 8.9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.122173, 0.0349066, -0.0523599, -0.0872665, -0.174533, -0.0872665, 0.0, 0.0349066, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ulpw8"]
_data = {
"Knockback": SubResource("Animation_rikkm"),
"RESET": SubResource("Animation_yts2b"),
"dancing": SubResource("Animation_s2syc")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_vby6h"]
atlas = ExtResource("7_4jayx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wkc08"]
atlas = ExtResource("7_4jayx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfeok"]
atlas = ExtResource("7_4jayx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3i0j"]
atlas = ExtResource("7_4jayx")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3ndo"]
atlas = ExtResource("7_4jayx")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wl3j"]
atlas = ExtResource("7_4jayx")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4sjo"]
atlas = ExtResource("7_4jayx")
region = Rect2(384, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qfjwq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vby6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wkc08")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfeok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3i0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3ndo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wl3j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4sjo")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_2abv4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.325, 0.325)]
}

[sub_resource type="Animation" id="Animation_siwmw"]
resource_name = "pulsing"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 3),
"transitions": PackedFloat32Array(1, 0.615572, 3.4822, 1),
"update": 0,
"values": [Vector2(0.325, 0.325), Vector2(0.37, 0.37), Vector2(0.2, 0.2), Vector2(0.325, 0.325)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5pny8"]
_data = {
"RESET": SubResource("Animation_2abv4"),
"pulsing": SubResource("Animation_siwmw")
}

[node name="Ravenspeedy" type="CharacterBody2D" groups=["enemy"]]
scale = Vector2(0.5, 0.5)
collision_layer = 4
collision_mask = 2
motion_mode = 1
script = ExtResource("1_jdidv")

[node name="orb_drop_component" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("2_7hrhw")]
highscore_amount = 100
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("3_lwjqc")]

[node name="HealthBar" parent="." instance=ExtResource("4_wwrqq")]
visible = false
light_mask = 2
visibility_layer = 2
offset_left = -24.0
offset_top = -36.0
offset_right = 26.0
offset_bottom = -26.0

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("5_vmd0m")]
collision_mask = 64
monitorable = false
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_ercf5")
debug_color = Color(0.984314, 0.121569, 0, 0.0823529)

[node name="HitboxComponent" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0
monitoring = false
script = ExtResource("6_4ska1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("CircleShape2D_0xh70")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_n74e4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ulpw8")
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
modulate = Color(0.881809, 0.373535, 1, 1)
sprite_frames = SubResource("SpriteFrames_qfjwq")
autoplay = "default"
frame_progress = 0.90758

[node name="Sprite2D_BG" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 0, 1, 1)
show_behind_parent = true
scale = Vector2(0.325, 0.325)
texture = ExtResource("8_chxx2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D/Sprite2D_BG"]
libraries = {
"": SubResource("AnimationLibrary_5pny8")
}
autoplay = "pulsing"
